--- a/rac90-temp.html
+++ b/rac90-temp.html
@@ -30,7 +30,7 @@
       href="/resources/favicons/favicon-16x16.png"
     />
     <link rel="manifest" href="/resources/favicons/site.webmanifest" />
-    <title>Resource Air Charter | About</title>
+    <title>Resource Air Charter | RAC90 Planes</title>
     <link
       href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600&display=swap"
       rel="stylesheet"
@@ -41,7 +41,9 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="resources/css/simplelightbox.css" />
     <link rel="stylesheet" href="resources/css/style.css" type="text/css" />
+
     <script src="https://kit.fontawesome.com/c3ee91c358.js"></script>
   </head>
 
@@ -97,63 +99,182 @@
     </nav>
 
     <section id="head" class="head">
-      <div class="jumbotron jumbotron-fluid about-section">
+      <div class="jumbotron jumbotron-fluid rac90-hero py-5">
         <div class="container">
-          <h1 class="display-4">About Us</h1>
+          <h1 class="display-4">RAC90 Plane Conversions</h1>
           <hr class="my-4 emphasis" />
-          <p class="lead about-lead">
-            Since 2014, Resource Air Charter has helped businesses "to get there
-            first with the most" anywhere in the world.
+          <p class="lead">
+            Outdeliver your competition with the most reliable air cargo
+            transport available.
           </p>
         </div>
         <div class="container py-4">
           <a href="tel:1-615-278-9450" class="btn btn-primary">Call Now</a>
-          <a href="/careers" class="btn btn-outline-primary">Careers</a>
         </div>
       </div>
     </section>
 
-    <div class="card bg-gray mb-5 py-4 text-center shadow">
+    <div class="card bg-gray py-4 text-center">
       <div class="container">
         <div class="card-body">
-          <h3 class="pb-3">Your Air Cargo and Conversion Partner</h3>
-          <div class="row justify-content-center">
-            <p>
-              Resource Air Charter has helped thousands of people ship critical
-              goods to destinations all over the world on time, safely, and with
-              the highest levels of performance.
-            </p>
+          <h3 class="pb-3">The first cargo plane built by cargo operators</h3>
+          <div class="row justify-content-between">
+            <div class="col-md-3">
+              <img
+                src="resources/imgs/icons/speedometer.png"
+                class="carousel-image d-block mb-2"
+              />
+              <div class="pt-2">
+                <h3 class="sub-head">235 ktas</h3>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <img
+                src="resources/imgs/icons/earth.png"
+                class="carousel-image d-block mb-2"
+              />
+              <div class="pt-2">
+                <h3 class="sub-head">1,200 nm range</h3>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <img
+                src="resources/imgs/icons/cargo.png"
+                class="carousel-image d-block mb-2"
+              />
+              <div class="pt-2">
+                <h3 class="sub-head">4,500 lbs useful load</h3>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <img
+                src="resources/imgs/icons/airplane.png"
+                class="carousel-image d-block mb-2"
+              />
+              <div class="pt-2">
+                <h3 class="sub-head">2,400 ft takeoff</h3>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
-    <section id="section-story" class="my-5 py-5">
+    <section class="large-panel">
       <div class="container">
-        <h2>Our Story</h2>
-        <div class="row">
-          <div>
-            <p class="longCopy">
-              At Resource Air Charter, we believe in one simple American value:
-              you need to get there first with the most. That's why we're proud
-              to provide you with 24/7 rapid response air charter services to
-              get your freight where it needs to be, exactly when you need it.
-              We adapt and overcome any surprises to accomplish your mission. No
-              exceptions. Guaranteed.
+        <div class="row align-items-center my-5">
+          <div class="col-lg-6 rounded border p-3 bg-offwhite">
+            <h1 class="alt-h1 text-center">
+              Discover The <span class="emphasis">RAC90</span>
+            </h1>
+            <p>
+              Introducing the new, best tool in air utility. With cutting-edge
+              engineering and efficiency, the RAC90 offers unparalleled cargo
+              transportation capabilities for individuals and fleets.
             </p>
-            <br />
-            <p class="longCopy">
-              From the second you call, the race begins and it's not over until
-              your shipment arrives safely and securely at its destination. When
-              minutes can make the difference for mission success, trust our
-              team to get you there.
-            </p>
+            <div class="container py-4 text-center">
+              <a href="tel:1-615-278-9450" class="btn btn-primary">Call Now</a>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- FOOTER -->
+    <section class="more-information my-5 py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h3 class="display-5 emphasis text-left">
+              A new innovation in cargo aviation
+            </h3>
+            <p>
+              It's time for a new era of cargo aircraft. The RAC90 King Air
+              Cargo Conversion is the new, exclusive air utility tool for cargo
+              operators to reach their destinations faster and more
+              fuel-efficently than ever before.
+            </p>
+            <ul>
+              <li>
+                Reinforced aircraft floor for stronger cargo storage.
+              </li>
+              <li>
+                58” aft cargo door for faster loading/unloading
+              </li>
+              <li>
+                Port side crew hatch
+              </li>
+              <li>
+                Unprecedented fuel efficiency by reducing up to 200 pounds from
+                equivalent Beechcraft King Air models
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6 pl-5">
+            <a href="tel:615-278-9450" class="information__link"
+              ><span
+                >Contact a Sales Rep<br />
+                Call (615) 278-9450</span
+              ></a
+            >
+            <a href="/careers" class="information__link"
+              ><span>Learn To Fly</span></a
+            >
+            <a href="#" class="information__link"><span>Document</span></a>
+            <a href="#" class="information__link"><span>Link</span></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="rac90-panel">
+      <div class="container">
+        <div class="text-center text-white">
+          <h4>Push the limits of what's possible.</h4>
+          <h3>
+            With enhanced stability and fuel efficiency, the RAC90 is a new
+            opportunity for cargo operators to excel.
+          </h3>
+        </div>
+      </div>
+    </section>
+
+    <section class="lightbox-gallery">
+      <div class="gallery">
+        <a href="/resources/imgs/rac90_full.jpg" class="big">
+          <img src="/resources/imgs/rac90_full.jpg" alt="fill" />
+        </a>
+        <a href="/resources/imgs/rac90_side.jpg" class="big">
+          <img src="/resources/imgs/rac90_side.jpg" alt="fill" />
+        </a>
+        <a href="/resources/imgs/rac90_cockpit.jpg" class="big">
+          <img src="/resources/imgs/rac90_cockpit.jpg" alt="fill" />
+        </a>
+        <a href="/resources/imgs/rac90_back.jpg" class="big">
+          <img src="/resources/imgs/rac90_back.jpg" alt="fill" />
+        </a>
+        <a href="/resources/imgs/rac90_front.jpg" class="big">
+          <img src="/resources/imgs/rac90_front.jpg" alt="fill" />
+        </a>
+        <a href="/resources/imgs/rac90_profile.jpg" class="big">
+          <img src="/resources/imgs/rac90_profile.jpg" alt="fill" />
+        </a>
+      </div>
+    </section>
+
+    <section class="section-shipping my-5 py-5">
+      <div class="container">
+        <h2>Need Financing?</h2>
+        <p class="text-center lead">
+          We believe strong partnerships create lasting relationships that
+          benefit everyone. Call today to discuss financing solutions customized
+          to your fleet needs.
+        </p>
+
+        <div class="container pt-4 text-center">
+          <a href="/contact" class="btn btn-primary">Call Now</a>
+        </div>
+      </div>
+    </section>
 
     <section class="section-contact my-5 pb-5">
       <div class="container">
@@ -312,17 +433,12 @@
                 <a
                   href="https://www.facebook.com/ResourceAirCharter"
                   target="_blank"
-                  rel="noopener"
                 >
                   <i class="fab fa-facebook-f facebook"></i>
                 </a>
               </li>
               <li>
-                <a
-                  href="https://twitter.com/resourceair"
-                  target="_blank"
-                  rel="noopener"
-                >
+                <a href="https://twitter.com/resourceair" target="_blank">
                   <i class="fab fa-twitter twitter"></i>
                 </a>
               </li>
@@ -368,5 +484,11 @@
     ></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="/resources/js/contact.js"></script>
+    <script src="resources/js/simple-lightbox.js"></script>
+    <script>
+      $(function() {
+        const $gallery = $(".gallery a").simpleLightbox();
+      });
+    </script>
   </body>
 </html>
