--- a/rac90.html
+++ b/rac90.html
@@ -98,59 +98,69 @@
       </div>
     </nav>
 
-    <section id="head" class="head head-demo">
-      <!-- Page Content -->
-      <div class="container">
-        <div class="row align-items-center my-5">
-          <div class="col-lg-6 rounded border p-3 bg-offwhite">
-            <h1 class="alt-h1 text-center">
-              Discover The <span class="emphasis">RAC90</span>
-            </h1>
-            <p>
-              Introducing the new, best tool in air utility. With cutting-edge
-              engineering and efficiency, the RAC90 offers unparalleled cargo
-              transportation capabilities for individuals and fleets.
-            </p>
-            <div class="container py-4 text-center">
-              <a href="tel:1-615-278-9450" class="btn btn-primary">Call Now</a>
-            </div>
-          </div>
+    <section id="head" class="head">
+      <div class="jumbotron jumbotron-fluid rac90-hero py-5">
+        <div class="container">
+          <h1 class="display-4">RAC90 Plane Conversions</h1>
+          <hr class="my-4 emphasis" />
+          <p class="lead">
+            Outdeliver your competition with the most reliable air cargo
+            transport available.
+          </p>
+        </div>
+        <div class="container py-4">
+          <a href="tel:1-615-278-9450" class="btn btn-primary">Call Now</a>
         </div>
       </div>
     </section>
+
     <div class="card bg-gray mb-5 py-4 text-center shadow">
+      <!-- <div class="card bg-gray py-4 text-center"> -->
       <div class="container">
         <div class="card-body">
           <h3 class="pb-3">The first cargo plane built by cargo operators</h3>
           <div class="row justify-content-between">
             <div class="col-md-3">
-              <i class="fas fa-tachometer-alt icon-big"></i>
+              <img
+                src="resources/imgs/icons/speedometer.png"
+                class="carousel-image d-block mb-2"
+              />
               <div class="pt-2">
                 <h3 class="sub-head">235 ktas</h3>
               </div>
             </div>
             <div class="col-md-3">
-              <i class="fas fa-globe-americas icon-big"></i>
+              <img
+                src="resources/imgs/icons/earth.png"
+                class="carousel-image d-block mb-2"
+              />
               <div class="pt-2">
                 <h3 class="sub-head">1,200 nm range</h3>
               </div>
             </div>
             <div class="col-md-3">
-              <i class="fas fa-weight-hanging icon-big"></i>
+              <img
+                src="resources/imgs/icons/cargo.png"
+                class="carousel-image d-block mb-2"
+              />
               <div class="pt-2">
                 <h3 class="sub-head">4,500 lbs useful load</h3>
               </div>
             </div>
             <div class="col-md-3">
-              <i class="fas fa-plane-departure icon-big"></i>
+              <img
+                src="resources/imgs/icons/airplane.png"
+                class="carousel-image d-block mb-2"
+              />
               <div class="pt-2">
-                <h3 class="sub-head">3,500 ft takeoff</h3>
+                <h3 class="sub-head">2,400 ft takeoff</h3>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
     <section class="more-information my-5 py-5">
       <div class="container">
         <div class="row">
@@ -197,6 +207,26 @@
       </div>
     </section>
 
+    <!-- <section class="large-panel">
+      <div class="container">
+        <div class="row align-items-center my-5">
+          <div class="col-lg-6 rounded border p-3 bg-offwhite">
+            <h1 class="alt-h1 text-center">
+              Discover The <span class="emphasis">RAC90</span>
+            </h1>
+            <p>
+              Introducing the new, best tool in air utility. With cutting-edge
+              engineering and efficiency, the RAC90 offers unparalleled cargo
+              transportation capabilities for individuals and fleets.
+            </p>
+            <div class="container py-4 text-center">
+              <a href="tel:1-615-278-9450" class="btn btn-primary">Call Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> -->
+
     <section class="rac90-panel">
       <div class="container">
         <div class="text-center text-white">
@@ -234,70 +264,12 @@
 
     <section class="section-shipping my-5 py-5">
       <div class="container">
-        <h2>Upgrade your fleet today</h2>
+        <h2>Need Financing?</h2>
         <p class="text-center lead">
-          If you fly air cargo, the RAC90 can help you meet all your mission
-          objectives.
+          We believe strong partnerships create lasting relationships that
+          benefit everyone. Call today to discuss financing solutions customized
+          to your fleet needs.
         </p>
-        <div class="container pt-5">
-          <div class="row justify-content-around align-items-center py-4">
-            <div class="card-transparent col-lg-4">
-              <img
-                src="resources/imgs/rac90_side.jpg"
-                class="gallery rounded"
-                alt="side of a RAC90 plane"
-              />
-            </div>
-            <div class="col-lg-5">
-              <div class="">
-                <h5 class="card-title emphasis">Efficiency</h5>
-                <p class="card-text">
-                  Time in the air means burning fuel and money. Lower your
-                  operating costs with the most fuel-efficient cargo plane on
-                  the market.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="row justify-content-around align-items-center py-4">
-            <div class="col-lg-5">
-              <div class="">
-                <h5 class="card-title emphasis">Speed</h5>
-                <p class="card-text">
-                  When you need cargo delivered ASAP, you can be confident the
-                  RAC90's top speed will get you to your destination faster than
-                  any other cargo plane in its category.
-                </p>
-              </div>
-            </div>
-            <div class="card-transparent col-lg-4">
-              <img
-                src="resources/imgs/rac90_profile.jpg"
-                class="gallery rounded"
-                alt="RAC90 plane in profile"
-              />
-            </div>
-          </div>
-          <div class="row justify-content-around align-items-center py-4">
-            <div class="card-transparent col-lg-4">
-              <img
-                src="resources/imgs/rac90_back.jpg"
-                class="gallery rounded"
-                alt="plane cockpit"
-              />
-            </div>
-            <div class="col-lg-5">
-              <div class="">
-                <h5 class="card-title emphasis">Innovation</h5>
-                <p class="card-text">
-                  Designed with consulting by a team of former NASA, Lockheed
-                  Martin, and General Dynamics engineers to be the new best
-                  utility aircraft in existence.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
 
         <div class="container pt-4 text-center">
           <a href="/contact" class="btn btn-primary">Call Now</a>
