--- a/cargo-services.html
+++ b/cargo-services.html
@@ -102,8 +102,7 @@
           <h1 class="display-4">Cargo Services</h1>
           <hr class="my-4 emphasis" />
           <p class="lead">
-            Protect your most critical deliveries with on-demand international
-            air charter.
+            Protect your most critical deliveries with on-demand air charter.
           </p>
         </div>
         <div class="container py-4">
